<resources>
    <string name="app_name">TipCalculator</string>
    <string name="tips_calculator">Tips calculator</string>
    <string name="reset">Reset</string>
    <string name="calculate">Calculate</string>
    <string name="summary">Summary</string>
    <string name="fill_the_fields_below_to_calculate_your_account">Fill the fields below to calculate your account.</string>
    <string name="accountLabel">How much is the account?</string>
    <string name="numberPeopleLabel">Number of people</string>
    <string name="percentageLabel">Tip percentage</string>

    <string-array name="number_people">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>


</resources>